new file:   backround.jpg 	modified:   index.html 	new file:   philip-myrtorp-csyQQeISmdA-unsplash.jpg 	new file:   photo-1551582045-6ec9c11d8697.avif 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Count Down Calendar</title>
+    <title>Countdowns</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Countdowns</h1>
+    <div class="menu">
+        <a href="./christmas/" class="menu-button christmas" target="_blank">
+            <img src="./photo-1551582045-6ec9c11d8697.avif" alt="Christmas Countdown">
+            Christmas Countdown
+        </a>
+        <a href="./newYear" class="menu-button newyear" target="_blank">
+            <img src="./philip-myrtorp-csyQQeISmdA-unsplash.jpg" alt="New Year Countdown">
+            New Year Countdown
+        </a>
+    </div>
+    <div class="card">
+        <div class="date">
+            <p class="heads" id="dates"></p>
+        </div>
+        <div class="date">
+            <p class="heads" id="hour"></p>
+        </div>
+    </div>
 
-    <a href="./christmas/" target="_blank">Christmas Eve</a>
-    <a href="./newYear/" target="_blank">Nea Year Eve</a>
-    
+    <script src="script.js"></script>
 </body>
 </html>
