modified:   menu/christmas/index.html 	new file:   menu/favicons/icons8-christmas-48.png 	new file:   menu/favicons/icons8-new-year's-eve.gif 	new file:   menu/favicons/icons8-new-year.gif 	modified:   menu/index.html 	modified:   menu/newYear/index.html

--- a/menu/christmas/index.html
+++ b/menu/christmas/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christmas 🎄</title>
+    <title>Christmas </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="../favicons/icons8-christmas-48.png">
 </head>
 <body>
 
