--- a/menu/index.html
+++ b/menu/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdowns</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="./favicons/icons8-new-year's-eve.gif">
 </head>
 <body>
-    <h1>Countdowns</h1>
+    <h1>Lets Count Down</h1>
     <div class="menu">
         <a href="./christmas/" class="menu-button christmas" target="_blank">
             <img src="./photo-1551582045-6ec9c11d8697.avif" alt="Christmas Countdown">
