--- a/menu/newYear/index.html
+++ b/menu/newYear/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year 🎇🎆</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="../favicons/icons8-new-year.gif">
 </head>
 <body>
 
