modified:   menu/index.html

--- a/menu/index.html
+++ b/menu/index.html
@@ -10,11 +10,11 @@
 <body>
     <h1>Lets Count Down</h1>
     <div class="menu">
-        <a href="../menu/christmas/index.html" class="menu-button christmas" target="_blank">
+        <a href="./christmas/index.html" class="menu-button christmas" target="_blank">
             <img src="./photo-1551582045-6ec9c11d8697.avif" alt="Christmas Countdown">
             Christmas Countdown
         </a>
-        <a href="../menu/newYear/index.html" class="menu-button newyear" target="_blank">
+        <a href="./newYear/index.html" class="menu-button newyear" target="_blank">
             <img src="./philip-myrtorp-csyQQeISmdA-unsplash.jpg" alt="New Year Countdown">
             New Year Countdown
         </a>
